--- a/templates/pm2/nightscout.env.j2
+++ b/templates/pm2/nightscout.env.j2
@@ -6,14 +6,14 @@ INSECURE_USE_HTTP=true
 
 MONGO_CONNECTION=mongodb://{{ extcfg.mongodb.nightscout_user }}:{{ extcfg.mongodb.nightscout_password}}@localhost:27017/nightscout
 
-ENABLE=careportal%20openaps%20iob%20bwp%20cage%20basal%20pump%20bridge
+ENABLE=bridge
 
 DEVICESTATUS_ADVANCED="true"
 BRIDGE_SERVER=EU
 BRIDGE_USER_NAME={{ extcfg.nightscout.dexcom_user }}
 BRIDGE_PASSWORD={{ extcfg.nightscout.dexcom_password }}
-AUTH_DEFAULT_ROLES=readable%20devicestatus-upload
 
+AUTH_DEFAULT_ROLES=readable
 DISPLAY_UNITS=mg/dl
 BG_HIGH=260
 BG_TARGET_TOP=180
